du coup partir sur Demineur fait et je crois j'ai fini le projet LALALALLA (ok dsl mr Dalaigre, j'avoue j'avais perdu Démineur donc le jeu démineur est que du Copilot mais genre, on ne nous dit pas "coder demineur" on dit "Ajouter la possibilité de jouer à un autre jeu : le démineur" donc bon (ok aussi sur les commandes genre "--module-path" je n'arrivais pas à les faire donc pour ça aussi je me suis fait aider) les autres sont bon
pour vous résumer les trucs de copilot c'est:
->à cause d'un bug de mon ordinateur, j'ai du m'aider de chatgpt pour launch.json (finalement je faisais ce qu'il fallait, le problème venait VRAIMENT de mon ordinateur "*** Fallback to Prism SW pipeline" j'avais une erreur de genre "no pipeline found" et ça m'avait fait perdre BEAUCOUP de temps j'espère que vous comprenez

->dès que je cliquais sur lancer une partie j'avais soit perdu soit gagné qui lançait et aussi le pop-up "êtes vous sûr" que je n'arrivais pas

->le chronomètre qui voulait pas se reset ('fin ça reset mais ça saute sur le temps précédent au lieu de faire 2, 3, 4)

->le grandeur de mots (dans les paramètres)

et finalement Démineur (en gros, j'ai juste repris l'ancien projet et demandé à copilot de le passer en javafx quoi... je me suis pas cassé la tête avec car encore on ne nous dit pas de le coder et je n'aurais jamais le temps en tout cas)

-> aussi j'ai rendu compte, quand on choisi le thème noir, tout est illisible, et je ne savais ABSOLUMENT rien comment le corriger.

finalement pour lancer l'autre jeu les prefix pour pouvoir les compiler (je ne sais pas comment faire autrement, et je ne sais pas comment genre rechecher ça sur internet)

et je crois que c'est tout.